@@ -2,7 +2,7 @@
 // $Id$
 /////////////////////////////////////////////////////////////////////////
 //
-//  Copyright (C) 2001-2017  The Bochs Project
+//  Copyright (C) 2001-2018  The Bochs Project
 //
 //  This library is free software; you can redistribute it and/or
 //  modify it under the terms of the GNU Lesser General Public
@@ -119,6 +119,7 @@ void bx_pit_c::init(void)
 
   BX_PIT_THIS s.speaker_data_on = 0;
   BX_PIT_THIS s.speaker_active = 0;
+  BX_PIT_THIS s.speaker_level = 0;
 
   BX_PIT_THIS s.timer.init();
   BX_PIT_THIS s.timer.set_OUT_handler(0, irq_handler);
@@ -170,6 +171,7 @@ void bx_pit_c::register_state(void)
   bx_list_c *list = new bx_list_c(SIM->get_bochs_root(), "pit", "8254 PIT State");
   new bx_shadow_bool_c(list, "speaker_data_on", &BX_PIT_THIS s.speaker_data_on);
   new bx_shadow_bool_c(list, "speaker_active", &BX_PIT_THIS s.speaker_active);
+  new bx_shadow_bool_c(list, "speaker_level", &BX_PIT_THIS s.speaker_level);
   new bx_shadow_num_c(list, "last_usec", &BX_PIT_THIS s.last_usec);
   new bx_shadow_num_c(list, "last_next_event_time", &BX_PIT_THIS s.last_next_event_time);
   new bx_shadow_num_c(list, "total_ticks", &BX_PIT_THIS s.total_ticks);
@@ -295,7 +297,7 @@ void bx_pit_c::write(Bit32u address, Bit32u dvalue, unsigned io_len)
   Bit64u my_time_usec = bx_virt_timer.time_usec(BX_PIT_THIS is_realtime);
   Bit64u time_passed = my_time_usec-BX_PIT_THIS s.last_usec;
   Bit32u value32, time_passed32 = (Bit32u)time_passed;
-  bx_bool new_speaker_active;
+  bx_bool new_speaker_active, new_speaker_level;
 
   if (time_passed32) {
     periodic(time_passed32);
@@ -341,6 +343,13 @@ void bx_pit_c::write(Bit32u address, Bit32u dvalue, unsigned io_len)
           DEV_speaker_beep_off();
         }
         BX_PIT_THIS s.speaker_active = new_speaker_active;
+      }
+      if (!BX_PIT_THIS s.speaker_active) {
+        new_speaker_level = BX_PIT_THIS s.speaker_data_on & BX_PIT_THIS s.timer.read_OUT(2);
+        if (BX_PIT_THIS s.speaker_level != new_speaker_level) {
+          DEV_speaker_set_line(new_speaker_level);
+          BX_PIT_THIS s.speaker_level = new_speaker_level;
+        }
       }
       break;
 
